max-width issue on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -5965,20 +5965,43 @@ td.visible-print {
   th.hidden-print,
   td.hidden-print {
     display: none !important; } }
-/* line 1, ../sass/_partials/_carousel.scss */
-.carousel {
-  padding: 0; }
-  /* line 4, ../sass/_partials/_carousel.scss */
-  .carousel .item {
-    list-style: none; }
-
-@media (min-width: 768px) and (max-width: 991px) {
+/* line 2, ../sass/_partials/_carousel.scss */
+.carousel-container.enabled {
+  overflow: hidden;
+  position: relative; }
+/* line 7, ../sass/_partials/_carousel.scss */
+.carousel-container .carousel {
+  padding: 0;
+  position: absolute;
+  left: 0px; }
   /* line 12, ../sass/_partials/_carousel.scss */
+  .carousel-container .carousel .item {
+    list-style: none;
+    position: relative; }
+    /* line 16, ../sass/_partials/_carousel.scss */
+    .carousel-container .carousel .item a {
+      display: block; }
+      /* line 19, ../sass/_partials/_carousel.scss */
+      .carousel-container .carousel .item a img {
+        max-width: 100%; }
+
+@media (max-width: 767px) {
+  /* line 29, ../sass/_partials/_carousel.scss */
+  .carousel-container {
+    padding: 0; }
+    /* line 32, ../sass/_partials/_carousel.scss */
+    .carousel-container .carousel {
+      margin: 0px; }
+      /* line 35, ../sass/_partials/_carousel.scss */
+      .carousel-container .carousel .item {
+        padding: 0; } }
+@media (min-width: 768px) and (max-width: 991px) {
+  /* line 45, ../sass/_partials/_carousel.scss */
   .carousel .item img {
     max-width: 350px;
     width: 100%; } }
 @media (min-width: 992px) {
-  /* line 23, ../sass/_partials/_carousel.scss */
+  /* line 56, ../sass/_partials/_carousel.scss */
   .carousel .item img {
     max-width: 300px;
     width: 100%; } }
